# Beagle_ROS

./: .gitignore  README.md
src/GUI/: index.html  main.js  package-lock.json  package.json
src/GUI/assets/css/: styles.css
src/beagle/: CMakeLists.txt  package.xml
src/beagle/launch/: beagle.launch
src/beagle/src/: main.cpp  serial.h
src/cam/: CMakeLists.txt  package.xml
src/cam/src/: camera.h  main.cpp
src/nanolidar/: CMakeLists.txt
src/nanolidar/launch/: nanolidar.launch
src/nanolidar/src/: main.cpp
